# properties_management

./: .gitignore  CMakeLists.txt  authorization.md  compile.bat  data.db  flowchart.md  init.c  main.c  readme.md  resident.txt  start.bat  temp.bat  user data struct.md  worker.txt
assets/: admin.ui  login.ui
include/: auth.h  base_type.h  database.h  query.h  ui.h  user.h  user_logic.h
src/: admin_ui.c  auth.c  base_type.c  database.c  login_ui.c  query.c  residient_ui.c  ui.c  ui_functions.c  user.c  user_logic.c  worker_ui.c
